--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <title>My app</title>
   </head>
   <body>
     <div id="root"></div>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@16.13.1/umd/react.production.min.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@16.13.1/umd/react-dom.production.min.js"
+    ></script>
   </body>
 </html>
